Update lists at 20240829-0300

--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -246,6 +246,7 @@ deny 179.43.167.195;
 deny 179.43.182.232;
 deny 179.43.182.58;
 deny 180.150.226.99;
+deny 18.235.170.242;
 deny 184.105.48.40;
 deny 184.75.221.107;
 deny 185.100.85.132;
@@ -537,6 +538,7 @@ deny 185.246.86.197;
 deny 185.247.184.33;
 deny 185.247.224.143;
 deny 185.252.232.218;
+deny 185.254.196.141;
 deny 185.34.33.2;
 deny 185.35.202.222;
 deny 185.38.175.133;
@@ -940,7 +942,6 @@ deny 205.185.123.93;
 deny 205.185.124.176;
 deny 205.185.124.193;
 deny 205.185.127.231;
-deny 209.135.170.59;
 deny 209.141.32.181;
 deny 209.141.32.198;
 deny 209.141.37.94;
@@ -1077,7 +1078,6 @@ deny 2600:3c0a::f03c:94ff:fe5a:3a17;
 deny 2602:2da:0:33:5054:ff:fe6c:39dc;
 deny 2602:2da:0:34:5054:ff:fe7e:7c21;
 deny 2602:2e6:0:4::;
-deny 2602:f9f3:0:2::148;
 deny 2602:fc24:12:81a6::1;
 deny 2602:fc24:19:2b4::1;
 deny 2602:fc24:19:30::1;
@@ -1476,6 +1476,7 @@ deny 2a06:e80:3000:1:bad:babe:ca11:911;
 deny 2a07:b242:1000:1300:f250:8f0a:cdba:4d76;
 deny 2a07:e01:2:13::2;
 deny 2a07:e03:2a::bcde;
+deny 2a09:6301:0:2e1:b492:c29e:f532:42c6;
 deny 2a0a:4cc0:0:99:c44b:7eff:fe23:de3d;
 deny 2a0a:4cc0:1:101:a463:1eff:fee1:4874;
 deny 2a0a:4cc0:3:c6:887f:3dff:feab:e676;
@@ -1711,7 +1712,6 @@ deny 31.133.0.26;
 deny 31.133.0.36;
 deny 31.133.1.14;
 deny 31.42.185.134;
-deny 3.208.79.81;
 deny 35.0.127.52;
 deny 37.114.41.119;
 deny 37.120.190.85;
@@ -1829,6 +1829,7 @@ deny 51.91.18.151;
 deny 5.196.8.113;
 deny 5.196.95.34;
 deny 5.255.100.219;
+deny 5.255.100.26;
 deny 5.255.103.235;
 deny 5.255.104.202;
 deny 5.255.111.64;
@@ -1920,6 +1921,7 @@ deny 83.97.20.77;
 deny 84.16.224.227;
 deny 84.211.225.54;
 deny 84.247.165.51;
+deny 84.252.120.163;
 deny 85.17.9.83;
 deny 85.239.41.130;
 deny 85.93.218.204;
