--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -246,6 +246,7 @@ allow 179.43.167.195;
 allow 179.43.182.232;
 allow 179.43.182.58;
 allow 180.150.226.99;
+allow 18.235.170.242;
 allow 184.105.48.40;
 allow 184.75.221.107;
 allow 185.100.85.132;
@@ -537,6 +538,7 @@ allow 185.246.86.197;
 allow 185.247.184.33;
 allow 185.247.224.143;
 allow 185.252.232.218;
+allow 185.254.196.141;
 allow 185.34.33.2;
 allow 185.35.202.222;
 allow 185.38.175.133;
@@ -940,7 +942,6 @@ allow 205.185.123.93;
 allow 205.185.124.176;
 allow 205.185.124.193;
 allow 205.185.127.231;
-allow 209.135.170.59;
 allow 209.141.32.181;
 allow 209.141.32.198;
 allow 209.141.37.94;
@@ -1077,7 +1078,6 @@ allow 2600:3c0a::f03c:94ff:fe5a:3a17;
 allow 2602:2da:0:33:5054:ff:fe6c:39dc;
 allow 2602:2da:0:34:5054:ff:fe7e:7c21;
 allow 2602:2e6:0:4::;
-allow 2602:f9f3:0:2::148;
 allow 2602:fc24:12:81a6::1;
 allow 2602:fc24:19:2b4::1;
 allow 2602:fc24:19:30::1;
@@ -1476,6 +1476,7 @@ allow 2a06:e80:3000:1:bad:babe:ca11:911;
 allow 2a07:b242:1000:1300:f250:8f0a:cdba:4d76;
 allow 2a07:e01:2:13::2;
 allow 2a07:e03:2a::bcde;
+allow 2a09:6301:0:2e1:b492:c29e:f532:42c6;
 allow 2a0a:4cc0:0:99:c44b:7eff:fe23:de3d;
 allow 2a0a:4cc0:1:101:a463:1eff:fee1:4874;
 allow 2a0a:4cc0:3:c6:887f:3dff:feab:e676;
@@ -1711,7 +1712,6 @@ allow 31.133.0.26;
 allow 31.133.0.36;
 allow 31.133.1.14;
 allow 31.42.185.134;
-allow 3.208.79.81;
 allow 35.0.127.52;
 allow 37.114.41.119;
 allow 37.120.190.85;
@@ -1829,6 +1829,7 @@ allow 51.91.18.151;
 allow 5.196.8.113;
 allow 5.196.95.34;
 allow 5.255.100.219;
+allow 5.255.100.26;
 allow 5.255.103.235;
 allow 5.255.104.202;
 allow 5.255.111.64;
@@ -1920,6 +1921,7 @@ allow 83.97.20.77;
 allow 84.16.224.227;
 allow 84.211.225.54;
 allow 84.247.165.51;
+allow 84.252.120.163;
 allow 85.17.9.83;
 allow 85.239.41.130;
 allow 85.93.218.204;
