Update lists at 20240829-0900

--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -210,9 +210,9 @@ allow 173.249.57.253;
 allow 176.114.248.225;
 allow 176.118.193.33;
 allow 176.121.81.51;
+allow 176.124.221.200;
 allow 176.126.253.190;
 allow 176.58.100.98;
-allow 176.58.121.177;
 allow 176.97.114.202;
 allow 177.54.158.14;
 allow 177.54.158.194;
@@ -297,7 +297,6 @@ allow 185.153.197.227;
 allow 185.154.110.142;
 allow 185.154.110.17;
 allow 185.165.169.239;
-allow 185.165.169.42;
 allow 185.165.171.84;
 allow 185.165.190.111;
 allow 185.170.114.25;
@@ -1361,7 +1360,6 @@ allow 2a01:5e0:36:cf2a::1;
 allow 2a01:6340:2:501::10;
 allow 2a01:6340:2:501::20;
 allow 2a01:7e00::f03c:91ff:fe56:2656;
-allow 2a01:7e00::f03c:91ff:fe78:b382;
 allow 2a02:13f0:8100:6:688:5fe9:2e1f:1;
 allow 2a02:16d0:0:5::1;
 allow 2a02:2970:1001::4b;
@@ -1692,6 +1690,7 @@ allow 2a12:5940:13e2::2;
 allow 2a12:5940:144f::2;
 allow 2a12:5940:52c2::2;
 allow 2a12:5940:9101::2;
+allow 2a12:5940:a896::2;
 allow 2a12:5940:b4db::2;
 allow 2a12:5940:b4dd::2;
 allow 2a12:5940:c826::2;
@@ -1710,6 +1709,7 @@ allow 31.133.0.26;
 allow 31.133.0.36;
 allow 31.133.1.14;
 allow 31.42.185.134;
+allow 3.211.102.191;
 allow 35.0.127.52;
 allow 37.114.41.119;
 allow 37.120.190.85;
@@ -1825,7 +1825,6 @@ allow 51.89.153.112;
 allow 51.91.18.151;
 allow 5.196.8.113;
 allow 5.196.95.34;
-allow 52.23.20.206;
 allow 5.255.100.219;
 allow 5.255.100.26;
 allow 5.255.103.235;
