--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -210,9 +210,9 @@ set_real_ip_from 173.249.57.253;
 set_real_ip_from 176.114.248.225;
 set_real_ip_from 176.118.193.33;
 set_real_ip_from 176.121.81.51;
+set_real_ip_from 176.124.221.200;
 set_real_ip_from 176.126.253.190;
 set_real_ip_from 176.58.100.98;
-set_real_ip_from 176.58.121.177;
 set_real_ip_from 176.97.114.202;
 set_real_ip_from 177.54.158.14;
 set_real_ip_from 177.54.158.194;
@@ -297,7 +297,6 @@ set_real_ip_from 185.153.197.227;
 set_real_ip_from 185.154.110.142;
 set_real_ip_from 185.154.110.17;
 set_real_ip_from 185.165.169.239;
-set_real_ip_from 185.165.169.42;
 set_real_ip_from 185.165.171.84;
 set_real_ip_from 185.165.190.111;
 set_real_ip_from 185.170.114.25;
@@ -1361,7 +1360,6 @@ set_real_ip_from 2a01:5e0:36:cf2a::1;
 set_real_ip_from 2a01:6340:2:501::10;
 set_real_ip_from 2a01:6340:2:501::20;
 set_real_ip_from 2a01:7e00::f03c:91ff:fe56:2656;
-set_real_ip_from 2a01:7e00::f03c:91ff:fe78:b382;
 set_real_ip_from 2a02:13f0:8100:6:688:5fe9:2e1f:1;
 set_real_ip_from 2a02:16d0:0:5::1;
 set_real_ip_from 2a02:2970:1001::4b;
@@ -1692,6 +1690,7 @@ set_real_ip_from 2a12:5940:13e2::2;
 set_real_ip_from 2a12:5940:144f::2;
 set_real_ip_from 2a12:5940:52c2::2;
 set_real_ip_from 2a12:5940:9101::2;
+set_real_ip_from 2a12:5940:a896::2;
 set_real_ip_from 2a12:5940:b4db::2;
 set_real_ip_from 2a12:5940:b4dd::2;
 set_real_ip_from 2a12:5940:c826::2;
@@ -1710,6 +1709,7 @@ set_real_ip_from 31.133.0.26;
 set_real_ip_from 31.133.0.36;
 set_real_ip_from 31.133.1.14;
 set_real_ip_from 31.42.185.134;
+set_real_ip_from 3.211.102.191;
 set_real_ip_from 35.0.127.52;
 set_real_ip_from 37.114.41.119;
 set_real_ip_from 37.120.190.85;
@@ -1825,7 +1825,6 @@ set_real_ip_from 51.89.153.112;
 set_real_ip_from 51.91.18.151;
 set_real_ip_from 5.196.8.113;
 set_real_ip_from 5.196.95.34;
-set_real_ip_from 52.23.20.206;
 set_real_ip_from 5.255.100.219;
 set_real_ip_from 5.255.100.26;
 set_real_ip_from 5.255.103.235;
