--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -419,7 +419,6 @@ deny 2a01:5e0:36:cf2a::1;
 deny 2a01:6340:2:501::10;
 deny 2a01:6340:2:501::20;
 deny 2a01:7e00::f03c:91ff:fe56:2656;
-deny 2a01:7e00::f03c:91ff:fe78:b382;
 deny 2a02:13f0:8100:6:688:5fe9:2e1f:1;
 deny 2a02:16d0:0:5::1;
 deny 2a02:2970:1001::4b;
@@ -750,6 +749,7 @@ deny 2a12:5940:13e2::2;
 deny 2a12:5940:144f::2;
 deny 2a12:5940:52c2::2;
 deny 2a12:5940:9101::2;
+deny 2a12:5940:a896::2;
 deny 2a12:5940:b4db::2;
 deny 2a12:5940:b4dd::2;
 deny 2a12:5940:c826::2;
