Update lists at 20240829-1800

--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -58,6 +58,7 @@ allow 107.189.14.43;
 allow 107.189.1.80;
 allow 107.189.1.9;
 allow 107.189.2.108;
+allow 107.189.2.206;
 allow 107.189.29.103;
 allow 107.189.29.184;
 allow 107.189.30.236;
@@ -201,11 +202,11 @@ allow 172.232.164.52;
 allow 172.235.29.198;
 allow 172.81.131.110;
 allow 172.81.131.111;
+allow 172.81.131.139;
 allow 172.81.131.156;
 allow 172.81.132.94;
 allow 173.0.3.111;
 allow 173.249.57.253;
-allow 176.114.248.225;
 allow 176.118.193.33;
 allow 176.121.81.51;
 allow 176.124.221.200;
@@ -245,7 +246,6 @@ allow 179.43.167.195;
 allow 179.43.182.232;
 allow 179.43.182.58;
 allow 180.150.226.99;
-allow 18.205.11.88;
 allow 184.105.48.40;
 allow 184.75.221.107;
 allow 185.100.85.132;
@@ -521,6 +521,7 @@ allow 185.241.208.71;
 allow 185.241.208.81;
 allow 185.243.218.110;
 allow 185.243.218.202;
+allow 185.243.218.204;
 allow 185.243.218.35;
 allow 185.243.218.89;
 allow 185.243.23.81;
@@ -546,6 +547,7 @@ allow 185.40.4.132;
 allow 185.40.4.149;
 allow 185.40.4.150;
 allow 185.40.4.38;
+allow 185.40.4.94;
 allow 185.42.170.203;
 allow 185.56.171.94;
 allow 185.56.83.83;
@@ -1404,6 +1406,7 @@ allow 2a03:6f20:531::254;
 allow 2a03:94e0:2421:dead::1;
 allow 2a03:94e0:242c:dead::1;
 allow 2a03:94e0:243a:dead::1;
+allow 2a03:94e0:24a1:dead::1;
 allow 2a03:94e0:2660:4819:623:8331:4852:1;
 allow 2a03:94e0:ffff:185:181:61:0:115;
 allow 2a03:94e0:ffff:185:181:61:0:142;
@@ -1471,7 +1474,6 @@ allow 2a06:1700:4:14::1;
 allow 2a06:d380:0:103::62;
 allow 2a06:d380:0:103::63;
 allow 2a06:e80:3000:1:bad:babe:ca11:911;
-allow 2a07:b242:1000:1300:f250:8f0a:cdba:4d76;
 allow 2a07:e01:2:13::2;
 allow 2a07:e03:2a::bcde;
 allow 2a09:6301:0:2e1:b492:c29e:f532:42c6;
@@ -1655,6 +1657,7 @@ allow 2a0d:c2c0:1:4::2;
 allow 2a0e:4005:1002:ffff:185:40:4:132;
 allow 2a0e:4005:1002:ffff:185:40:4:149;
 allow 2a0e:4005:1002:ffff:185:40:4:38;
+allow 2a0e:4005:1002:ffff:185:40:4:94;
 allow 2a0e:97c0:3ea:372::1;
 allow 2a0e:97c0:3ea:bc::1;
 allow 2a0e:97c0:3ea:fd::1;
@@ -1702,7 +1705,6 @@ allow 2a12:a800:2:1:185:241:208:81;
 allow 2a12:a800:2:1:45:138:16:178;
 allow 2a12:a800:2:1:45:138:16:213;
 allow 2a12:bec4:11d3:de9f::1;
-allow 2a12:d8c0:109a:9001::7;
 allow 31.129.22.65;
 allow 31.133.0.16;
 allow 31.133.0.17;
@@ -1827,7 +1829,6 @@ allow 51.91.18.151;
 allow 5.196.8.113;
 allow 5.196.95.34;
 allow 5.255.100.219;
-allow 5.255.100.26;
 allow 5.255.103.235;
 allow 5.255.104.202;
 allow 5.255.111.64;
@@ -1853,6 +1854,7 @@ allow 5.2.72.110;
 allow 5.2.79.179;
 allow 5.2.79.190;
 allow 5.34.182.203;
+allow 54.146.136.125;
 allow 5.42.80.232;
 allow 5.42.80.233;
 allow 5.42.80.234;
@@ -1887,7 +1889,6 @@ allow 77.221.159.189;
 allow 77.221.159.192;
 allow 77.221.159.193;
 allow 77.221.159.75;
-allow 77.37.3.7;
 allow 77.48.28.193;
 allow 77.48.28.204;
 allow 77.48.28.237;
@@ -1910,6 +1911,7 @@ allow 82.153.138.119;
 allow 82.197.182.161;
 allow 82.221.128.191;
 allow 82.221.131.5;
+allow 82.221.139.190;
 allow 82.68.49.227;
 allow 82.85.247.254;
 allow 83.217.9.73;
@@ -1988,6 +1990,7 @@ allow 94.102.51.15;
 allow 94.140.115.63;
 allow 94.142.241.194;
 allow 94.142.244.16;
+allow 94.158.246.65;
 allow 94.16.112.22;
 allow 94.16.116.81;
 allow 94.16.116.86;
