--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -462,6 +462,7 @@ allow 2a03:6f20:531::254;
 allow 2a03:94e0:2421:dead::1;
 allow 2a03:94e0:242c:dead::1;
 allow 2a03:94e0:243a:dead::1;
+allow 2a03:94e0:24a1:dead::1;
 allow 2a03:94e0:2660:4819:623:8331:4852:1;
 allow 2a03:94e0:ffff:185:181:61:0:115;
 allow 2a03:94e0:ffff:185:181:61:0:142;
@@ -529,7 +530,6 @@ allow 2a06:1700:4:14::1;
 allow 2a06:d380:0:103::62;
 allow 2a06:d380:0:103::63;
 allow 2a06:e80:3000:1:bad:babe:ca11:911;
-allow 2a07:b242:1000:1300:f250:8f0a:cdba:4d76;
 allow 2a07:e01:2:13::2;
 allow 2a07:e03:2a::bcde;
 allow 2a09:6301:0:2e1:b492:c29e:f532:42c6;
@@ -713,6 +713,7 @@ allow 2a0d:c2c0:1:4::2;
 allow 2a0e:4005:1002:ffff:185:40:4:132;
 allow 2a0e:4005:1002:ffff:185:40:4:149;
 allow 2a0e:4005:1002:ffff:185:40:4:38;
+allow 2a0e:4005:1002:ffff:185:40:4:94;
 allow 2a0e:97c0:3ea:372::1;
 allow 2a0e:97c0:3ea:bc::1;
 allow 2a0e:97c0:3ea:fd::1;
@@ -760,4 +761,3 @@ allow 2a12:a800:2:1:185:241:208:81;
 allow 2a12:a800:2:1:45:138:16:178;
 allow 2a12:a800:2:1:45:138:16:213;
 allow 2a12:bec4:11d3:de9f::1;
-allow 2a12:d8c0:109a:9001::7;
