--- a/set_real_ip_from-tor_ips_v6.conf
+++ b/set_real_ip_from-tor_ips_v6.conf
@@ -14,7 +14,6 @@ set_real_ip_from 2001:41d0:304:200::9dce;
 set_real_ip_from 2001:41d0:401:3200::3efd;
 set_real_ip_from 2001:41d0:404:300::dd2;
 set_real_ip_from 2001:41d0:601:1100::108e;
-set_real_ip_from 2001:41d0:601:1100::6524;
 set_real_ip_from 2001:41d0:701:1100::38fc;
 set_real_ip_from 2001:41d0:701:1100::4f60;
 set_real_ip_from 2001:41d0:800:1f70::;
@@ -468,6 +467,7 @@ set_real_ip_from 2a03:94e0:ffff:185:181:61:0:115;
 set_real_ip_from 2a03:94e0:ffff:185:181:61:0:142;
 set_real_ip_from 2a03:94e0:ffff:185:243:218:0:110;
 set_real_ip_from 2a03:94e0:ffff:185:243:218:0:202;
+set_real_ip_from 2a03:94e0:ffff:185:243:218:0:204;
 set_real_ip_from 2a03:94e0:ffff:185:243:218:0:35;
 set_real_ip_from 2a03:94e0:ffff:185:243:218:0:89;
 set_real_ip_from 2a03:94e0:ffff:195:16:73:0:134;
@@ -530,6 +530,7 @@ set_real_ip_from 2a06:1700:4:14::1;
 set_real_ip_from 2a06:d380:0:103::62;
 set_real_ip_from 2a06:d380:0:103::63;
 set_real_ip_from 2a06:e80:3000:1:bad:babe:ca11:911;
+set_real_ip_from 2a07:b242:1000:1300:f250:8f0a:cdba:4d76;
 set_real_ip_from 2a07:e01:2:13::2;
 set_real_ip_from 2a07:e03:2a::bcde;
 set_real_ip_from 2a09:6301:0:2e1:b492:c29e:f532:42c6;
@@ -743,7 +744,6 @@ set_real_ip_from 2a0f:e586:f:f::188;
 set_real_ip_from 2a0f:e586:f:f:a052:2166:bef9:a432;
 set_real_ip_from 2a0f:e586:f:f:baa4:d491:90be:dca5;
 set_real_ip_from 2a0f:e586:f:f:c94a:de42:aac1:9045;
-set_real_ip_from 2a10:1fc0:10::debc:26b9;
 set_real_ip_from 2a10:c800:1:9cc6::1;
 set_real_ip_from 2a10:c800:1:f7f8:0:1ce:1ce:babe;
 set_real_ip_from 2a11:6100:0:22:a236:9fff:fe9e:36ea;
