--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -1,3 +1,4 @@
+allow 100.29.20.149;
 allow 102.130.113.9;
 allow 102.130.117.167;
 allow 102.130.127.117;
@@ -133,7 +134,6 @@ allow 139.47.104.213;
 allow 139.99.172.11;
 allow 139.99.8.57;
 allow 141.239.146.142;
-allow 141.95.59.93;
 allow 141.98.11.62;
 allow 141.98.119.106;
 allow 142.171.12.88;
@@ -539,6 +539,7 @@ allow 185.34.33.2;
 allow 185.35.202.222;
 allow 185.38.175.133;
 allow 185.39.207.83;
+allow 185.40.4.100;
 allow 185.40.4.101;
 allow 185.40.4.132;
 allow 185.40.4.149;
@@ -1236,7 +1237,6 @@ allow 2a04:52c0:116:e0e3::1;
 allow 2a04:52c0:128:c6e7:50ef:cafe:babe:1337;
 allow 2a04:52c0:130:896e::1;
 allow 2a04:52c0:130:d285::1;
-allow 2a04:9dc0:31::c0cc:4d;
 allow 2a05:541:110:20::1;
 allow 2a05:541:110:3e::1;
 allow 2a05:541:112:31::1;
@@ -1450,6 +1450,7 @@ allow 2a0b:f4c2::9;
 allow 2a0c:5cc0:1:1::293c:1518;
 allow 2a0c:e300::23;
 allow 2a0d:c2c0:1:4::2;
+allow 2a0e:4005:1002:ffff:185:40:4:100;
 allow 2a0e:4005:1002:ffff:185:40:4:101;
 allow 2a0e:4005:1002:ffff:185:40:4:132;
 allow 2a0e:4005:1002:ffff:185:40:4:149;
@@ -1511,7 +1512,6 @@ allow 31.133.0.26;
 allow 31.133.0.36;
 allow 31.133.1.14;
 allow 31.42.185.134;
-allow 3.210.219.251;
 allow 35.0.127.52;
 allow 37.114.41.119;
 allow 37.120.190.85;
@@ -1670,7 +1670,6 @@ allow 62.182.84.146;
 allow 64.227.115.78;
 allow 64.227.159.148;
 allow 66.146.193.33;
-allow 66.206.27.62;
 allow 66.220.242.222;
 allow 66.78.40.182;
 allow 67.219.109.141;
@@ -1714,7 +1713,6 @@ allow 82.68.49.227;
 allow 82.85.247.254;
 allow 83.217.9.73;
 allow 83.96.213.63;
-allow 83.97.20.77;
 allow 84.16.224.227;
 allow 84.19.182.20;
 allow 84.211.225.54;
