--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -390,7 +390,6 @@ deny 2a04:52c0:116:e0e3::1;
 deny 2a04:52c0:128:c6e7:50ef:cafe:babe:1337;
 deny 2a04:52c0:130:896e::1;
 deny 2a04:52c0:130:d285::1;
-deny 2a04:9dc0:31::c0cc:4d;
 deny 2a05:541:110:20::1;
 deny 2a05:541:110:3e::1;
 deny 2a05:541:112:31::1;
@@ -604,6 +603,7 @@ deny 2a0b:f4c2::9;
 deny 2a0c:5cc0:1:1::293c:1518;
 deny 2a0c:e300::23;
 deny 2a0d:c2c0:1:4::2;
+deny 2a0e:4005:1002:ffff:185:40:4:100;
 deny 2a0e:4005:1002:ffff:185:40:4:101;
 deny 2a0e:4005:1002:ffff:185:40:4:132;
 deny 2a0e:4005:1002:ffff:185:40:4:149;
