--- a/set_real_ip_from-tor_ips_v6.conf
+++ b/set_real_ip_from-tor_ips_v6.conf
@@ -14,6 +14,7 @@ set_real_ip_from 2001:41d0:304:200::9dce;
 set_real_ip_from 2001:41d0:401:3200::3efd;
 set_real_ip_from 2001:41d0:404:300::dd2;
 set_real_ip_from 2001:41d0:601:1100::108e;
+set_real_ip_from 2001:41d0:601:1100::6524;
 set_real_ip_from 2001:41d0:701:1100::38fc;
 set_real_ip_from 2001:41d0:701:1100::4f60;
 set_real_ip_from 2001:41d0:800:1f70::;
@@ -178,6 +179,7 @@ set_real_ip_from 2605:6400:20:1c01:7d33:a5db:c2b9:1092;
 set_real_ip_from 2605:6400:20:2417::69;
 set_real_ip_from 2605:6400:20:3ea:c2a3:1162:7224:e5df;
 set_real_ip_from 2605:6400:20:482:3920:1829:1839:1293;
+set_real_ip_from 2605:6400:20:a28:b37e:88e9:caa1:7b9c;
 set_real_ip_from 2605:6400:20:be7::1;
 set_real_ip_from 2605:6400:20:ff9::1;
 set_real_ip_from 2605:6400:30:e88d:36fc:7ca1:dff5:1e57;
