Update lists at 20240830-2100

--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -143,7 +143,6 @@ allow 143.110.156.176;
 allow 144.172.118.4;
 allow 144.172.118.55;
 allow 144.24.197.112;
-allow 146.59.126.232;
 allow 146.59.35.246;
 allow 146.59.35.38;
 allow 146.70.121.124;
@@ -226,6 +225,7 @@ allow 178.17.174.164;
 allow 178.175.131.141;
 allow 178.175.142.26;
 allow 178.175.148.209;
+allow 178.175.148.246;
 allow 178.20.55.16;
 allow 178.20.55.182;
 allow 178.218.144.18;
@@ -722,7 +722,6 @@ allow 2001:41d0:304:200::9dce;
 allow 2001:41d0:401:3200::3efd;
 allow 2001:41d0:404:300::dd2;
 allow 2001:41d0:601:1100::108e;
-allow 2001:41d0:601:1100::6524;
 allow 2001:41d0:701:1100::38fc;
 allow 2001:41d0:701:1100::4f60;
 allow 2001:41d0:800:1f70::;
@@ -1162,12 +1161,14 @@ allow 2a00:11c0:1f:1::55;
 allow 2a00:1728:f:f:f:f:c03c:9898;
 allow 2a00:1b88:4::2;
 allow 2a00:1b88:4::4;
+allow 2a00:1dc0:caff:12c::4d3a;
 allow 2a00:1dc0:caff:138::94d2;
 allow 2a00:1dc0:caff:15::45dc;
 allow 2a00:1dc0:caff:73::a568;
 allow 2a00:1dc0:caff:8b::24bd;
 allow 2a00:99a0:0:1000::2;
 allow 2a01:4262:1ab:ffff::133;
+allow 2a01:5e0:36:c5cd::1;
 allow 2a01:5e0:36:cf2a::1;
 allow 2a01:6340:2:501::10;
 allow 2a01:6340:2:501::20;
@@ -1517,7 +1518,6 @@ allow 31.133.0.26;
 allow 31.133.0.36;
 allow 31.133.1.14;
 allow 31.42.185.134;
-allow 34.230.247.78;
 allow 35.0.127.52;
 allow 37.114.41.119;
 allow 37.120.190.85;
@@ -1654,7 +1654,6 @@ allow 5.255.99.124;
 allow 5.255.99.5;
 allow 5.2.67.226;
 allow 5.2.72.110;
-allow 5.2.79.179;
 allow 5.2.79.190;
 allow 5.34.182.203;
 allow 5.42.80.232;
@@ -1784,6 +1783,7 @@ allow 93.95.231.14;
 allow 93.99.104.128;
 allow 93.99.104.18;
 allow 93.99.104.194;
+allow 93.99.104.195;
 allow 94.102.51.15;
 allow 94.140.115.63;
 allow 94.142.241.194;
@@ -1813,3 +1813,4 @@ allow 95.211.244.28;
 allow 96.126.98.146;
 allow 96.27.198.133;
 allow 98.128.173.33;
+allow 98.82.80.204;
