--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -14,7 +14,6 @@ allow 2001:41d0:304:200::9dce;
 allow 2001:41d0:401:3200::3efd;
 allow 2001:41d0:404:300::dd2;
 allow 2001:41d0:601:1100::108e;
-allow 2001:41d0:601:1100::6524;
 allow 2001:41d0:701:1100::38fc;
 allow 2001:41d0:701:1100::4f60;
 allow 2001:41d0:800:1f70::;
@@ -312,12 +311,14 @@ allow 2a00:11c0:1f:1::55;
 allow 2a00:1728:f:f:f:f:c03c:9898;
 allow 2a00:1b88:4::2;
 allow 2a00:1b88:4::4;
+allow 2a00:1dc0:caff:12c::4d3a;
 allow 2a00:1dc0:caff:138::94d2;
 allow 2a00:1dc0:caff:15::45dc;
 allow 2a00:1dc0:caff:73::a568;
 allow 2a00:1dc0:caff:8b::24bd;
 allow 2a00:99a0:0:1000::2;
 allow 2a01:4262:1ab:ffff::133;
+allow 2a01:5e0:36:c5cd::1;
 allow 2a01:5e0:36:cf2a::1;
 allow 2a01:6340:2:501::10;
 allow 2a01:6340:2:501::20;
