--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -143,7 +143,6 @@ deny 143.110.156.176;
 deny 144.172.118.4;
 deny 144.172.118.55;
 deny 144.24.197.112;
-deny 146.59.126.232;
 deny 146.59.35.246;
 deny 146.59.35.38;
 deny 146.70.121.124;
@@ -226,6 +225,7 @@ deny 178.17.174.164;
 deny 178.175.131.141;
 deny 178.175.142.26;
 deny 178.175.148.209;
+deny 178.175.148.246;
 deny 178.20.55.16;
 deny 178.20.55.182;
 deny 178.218.144.18;
@@ -722,7 +722,6 @@ deny 2001:41d0:304:200::9dce;
 deny 2001:41d0:401:3200::3efd;
 deny 2001:41d0:404:300::dd2;
 deny 2001:41d0:601:1100::108e;
-deny 2001:41d0:601:1100::6524;
 deny 2001:41d0:701:1100::38fc;
 deny 2001:41d0:701:1100::4f60;
 deny 2001:41d0:800:1f70::;
@@ -1162,12 +1161,14 @@ deny 2a00:11c0:1f:1::55;
 deny 2a00:1728:f:f:f:f:c03c:9898;
 deny 2a00:1b88:4::2;
 deny 2a00:1b88:4::4;
+deny 2a00:1dc0:caff:12c::4d3a;
 deny 2a00:1dc0:caff:138::94d2;
 deny 2a00:1dc0:caff:15::45dc;
 deny 2a00:1dc0:caff:73::a568;
 deny 2a00:1dc0:caff:8b::24bd;
 deny 2a00:99a0:0:1000::2;
 deny 2a01:4262:1ab:ffff::133;
+deny 2a01:5e0:36:c5cd::1;
 deny 2a01:5e0:36:cf2a::1;
 deny 2a01:6340:2:501::10;
 deny 2a01:6340:2:501::20;
@@ -1517,7 +1518,6 @@ deny 31.133.0.26;
 deny 31.133.0.36;
 deny 31.133.1.14;
 deny 31.42.185.134;
-deny 34.230.247.78;
 deny 35.0.127.52;
 deny 37.114.41.119;
 deny 37.120.190.85;
@@ -1654,7 +1654,6 @@ deny 5.255.99.124;
 deny 5.255.99.5;
 deny 5.2.67.226;
 deny 5.2.72.110;
-deny 5.2.79.179;
 deny 5.2.79.190;
 deny 5.34.182.203;
 deny 5.42.80.232;
@@ -1784,6 +1783,7 @@ deny 93.95.231.14;
 deny 93.99.104.128;
 deny 93.99.104.18;
 deny 93.99.104.194;
+deny 93.99.104.195;
 deny 94.102.51.15;
 deny 94.140.115.63;
 deny 94.142.241.194;
@@ -1813,3 +1813,4 @@ deny 95.211.244.28;
 deny 96.126.98.146;
 deny 96.27.198.133;
 deny 98.128.173.33;
+deny 98.82.80.204;
