Update lists at 20240831-0300

--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -134,7 +134,6 @@ allow 2600:3c08::f03c:94ff:fef8:9872;
 allow 2600:3c0a::f03c:94ff:fe5a:3a17;
 allow 2602:2da:0:33:5054:ff:fe6c:39dc;
 allow 2602:2da:0:34:5054:ff:fe7e:7c21;
-allow 2602:2e5::104;
 allow 2602:2e6:0:4::;
 allow 2602:fc24:12:81a6::1;
 allow 2602:fc24:19:2b4::1;
@@ -366,7 +365,6 @@ allow 2a03:6f20:531::254;
 allow 2a03:94e0:2660:4819:623:8331:4852:1;
 allow 2a03:94e0:ffff:185:181:61:0:142;
 allow 2a03:94e0:ffff:185:243:218:0:35;
-allow 2a03:94e0:ffff:195:16:73:0:134;
 allow 2a03:e600:100::1;
 allow 2a03:e600:100::2;
 allow 2a03:e600:100::3;
@@ -388,6 +386,7 @@ allow 2a04:52c0:104:31e6::1;
 allow 2a04:52c0:104:ad97::1;
 allow 2a04:52c0:104:fe02::1;
 allow 2a04:52c0:105:78fc::1;
+allow 2a04:52c0:105:98a3::1;
 allow 2a04:52c0:108:a34f::1;
 allow 2a04:52c0:116:e0e3::1;
 allow 2a04:52c0:128:c6e7:50ef:cafe:babe:1337;
