--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -666,7 +666,6 @@ deny 194.26.192.161;
 deny 194.26.192.77;
 deny 194.62.248.21;
 deny 195.160.220.104;
-deny 195.16.73.134;
 deny 195.176.3.19;
 deny 195.176.3.20;
 deny 195.176.3.23;
@@ -954,7 +953,6 @@ deny 23.154.177.7;
 deny 23.154.177.8;
 deny 23.154.177.9;
 deny 23.155.24.4;
-deny 23.155.8.104;
 deny 23.236.122.62;
 deny 23.94.211.25;
 deny 2400:6180:100:d0::2c:3001;
@@ -983,7 +981,6 @@ deny 2600:3c08::f03c:94ff:fef8:9872;
 deny 2600:3c0a::f03c:94ff:fe5a:3a17;
 deny 2602:2da:0:33:5054:ff:fe6c:39dc;
 deny 2602:2da:0:34:5054:ff:fe7e:7c21;
-deny 2602:2e5::104;
 deny 2602:2e6:0:4::;
 deny 2602:fc24:12:81a6::1;
 deny 2602:fc24:19:2b4::1;
@@ -1216,7 +1213,6 @@ deny 2a03:6f20:531::254;
 deny 2a03:94e0:2660:4819:623:8331:4852:1;
 deny 2a03:94e0:ffff:185:181:61:0:142;
 deny 2a03:94e0:ffff:185:243:218:0:35;
-deny 2a03:94e0:ffff:195:16:73:0:134;
 deny 2a03:e600:100::1;
 deny 2a03:e600:100::2;
 deny 2a03:e600:100::3;
@@ -1238,6 +1234,7 @@ deny 2a04:52c0:104:31e6::1;
 deny 2a04:52c0:104:ad97::1;
 deny 2a04:52c0:104:fe02::1;
 deny 2a04:52c0:105:78fc::1;
+deny 2a04:52c0:105:98a3::1;
 deny 2a04:52c0:108:a34f::1;
 deny 2a04:52c0:116:e0e3::1;
 deny 2a04:52c0:128:c6e7:50ef:cafe:babe:1337;
@@ -1518,8 +1515,8 @@ deny 31.133.0.26;
 deny 31.133.0.36;
 deny 31.133.1.14;
 deny 31.42.185.134;
-deny 34.225.227.160;
 deny 35.0.127.52;
+deny 35.173.168.80;
 deny 37.114.41.119;
 deny 37.120.190.85;
 deny 37.120.239.59;
@@ -1634,6 +1631,8 @@ deny 51.91.18.151;
 deny 5.196.8.113;
 deny 5.196.95.34;
 deny 5.255.100.219;
+deny 5.255.100.227;
+deny 5.255.100.26;
 deny 5.255.103.235;
 deny 5.255.104.202;
 deny 5.255.111.64;
