--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -5,7 +5,6 @@ allow 103.109.101.105;
 allow 103.126.161.54;
 allow 103.163.218.11;
 allow 103.164.54.199;
-allow 103.174.253.222;
 allow 103.186.0.144;
 allow 103.193.179.233;
 allow 103.196.37.111;
@@ -209,7 +208,6 @@ allow 173.0.3.111;
 allow 173.249.57.253;
 allow 176.114.248.225;
 allow 176.118.193.33;
-allow 176.121.81.51;
 allow 176.124.221.200;
 allow 176.126.253.190;
 allow 176.58.100.98;
@@ -247,6 +245,7 @@ allow 179.43.167.195;
 allow 179.43.182.232;
 allow 179.43.182.58;
 allow 180.150.226.99;
+allow 18.204.190.215;
 allow 184.105.48.40;
 allow 184.75.221.107;
 allow 185.100.85.132;
@@ -951,6 +950,7 @@ allow 23.154.177.7;
 allow 23.154.177.8;
 allow 23.154.177.9;
 allow 23.155.24.4;
+allow 23.155.8.104;
 allow 23.236.122.62;
 allow 23.94.211.25;
 allow 2400:6180:100:d0::2c:3001;
@@ -979,6 +979,7 @@ allow 2600:3c08::f03c:94ff:fef8:9872;
 allow 2600:3c0a::f03c:94ff:fe5a:3a17;
 allow 2602:2da:0:33:5054:ff:fe6c:39dc;
 allow 2602:2da:0:34:5054:ff:fe7e:7c21;
+allow 2602:2e5::104;
 allow 2602:2e6:0:4::;
 allow 2602:fc24:12:81a6::1;
 allow 2602:fc24:19:2b4::1;
@@ -1238,6 +1239,7 @@ allow 2a04:52c0:116:e0e3::1;
 allow 2a04:52c0:128:c6e7:50ef:cafe:babe:1337;
 allow 2a04:52c0:130:896e::1;
 allow 2a04:52c0:130:d285::1;
+allow 2a04:9dc0:31::c0cc:4d;
 allow 2a05:541:110:20::1;
 allow 2a05:541:110:3e::1;
 allow 2a05:541:112:31::1;
@@ -1513,7 +1515,6 @@ allow 31.133.0.26;
 allow 31.133.0.36;
 allow 31.133.1.14;
 allow 31.42.185.134;
-allow 34.238.20.76;
 allow 35.0.127.52;
 allow 37.114.41.119;
 allow 37.120.190.85;
@@ -1685,7 +1686,6 @@ allow 77.221.157.237;
 allow 77.221.159.184;
 allow 77.221.159.189;
 allow 77.221.159.192;
-allow 77.221.159.193;
 allow 77.221.159.75;
 allow 77.37.3.7;
 allow 77.48.28.193;
@@ -1715,6 +1715,7 @@ allow 82.68.49.227;
 allow 82.85.247.254;
 allow 83.217.9.73;
 allow 83.96.213.63;
+allow 83.97.20.77;
 allow 84.16.224.227;
 allow 84.19.182.20;
 allow 84.211.225.54;
