--- a/set_real_ip_from-tor_ips_v6.conf
+++ b/set_real_ip_from-tor_ips_v6.conf
@@ -661,3 +661,4 @@ set_real_ip_from 2a12:a800:2:1:185:241:208:81;
 set_real_ip_from 2a12:a800:2:1:45:138:16:178;
 set_real_ip_from 2a12:a800:2:1:45:138:16:213;
 set_real_ip_from 2a12:bec4:11d3:de9f::1;
+set_real_ip_from 2a12:d8c0:109a:9001::7;
