Update lists at 20240901-0300

--- a/allow-tor_ips_v4.conf
+++ b/allow-tor_ips_v4.conf
@@ -868,6 +868,7 @@ allow 45.11.59.28;
 allow 45.118.133.44;
 allow 45.12.3.80;
 allow 45.128.133.242;
+allow 45.128.157.46;
 allow 45.131.65.34;
 allow 45.132.246.245;
 allow 45.134.225.36;
@@ -907,6 +908,7 @@ allow 45.141.215.95;
 allow 45.141.215.97;
 allow 45.148.10.111;
 allow 45.148.10.169;
+allow 45.151.122.34;
 allow 45.15.157.177;
 allow 45.61.185.172;
 allow 45.61.186.203;
@@ -968,10 +970,14 @@ allow 51.91.18.151;
 allow 5.196.8.113;
 allow 5.196.95.34;
 allow 5.255.100.219;
+allow 5.255.100.224;
 allow 5.255.100.227;
+allow 5.255.100.26;
+allow 5.255.101.10;
 allow 5.255.103.235;
 allow 5.255.104.202;
 allow 5.255.111.64;
+allow 5.255.114.171;
 allow 5.255.115.58;
 allow 5.255.117.56;
 allow 5.255.118.244;
@@ -987,11 +993,13 @@ allow 5.255.98.198;
 allow 5.255.98.23;
 allow 5.255.99.108;
 allow 5.255.99.124;
+allow 5.255.99.147;
 allow 5.255.99.5;
 allow 5.2.67.226;
 allow 5.2.72.110;
 allow 5.2.79.190;
 allow 5.34.182.203;
+allow 54.145.88.11;
 allow 5.42.80.232;
 allow 5.42.80.233;
 allow 5.42.80.234;
@@ -1123,6 +1131,7 @@ allow 93.99.104.128;
 allow 93.99.104.18;
 allow 93.99.104.194;
 allow 93.99.104.195;
+allow 93.99.104.40;
 allow 94.102.51.15;
 allow 94.140.115.63;
 allow 94.142.241.194;
