--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -1159,6 +1159,7 @@ deny 2a00:1dc0:caff:73::a568;
 deny 2a00:1dc0:caff:8b::24bd;
 deny 2a00:99a0:0:1000::2;
 deny 2a01:4262:1ab:ffff::133;
+deny 2a01:5e0:36:c311::1;
 deny 2a01:5e0:36:c5cd::1;
 deny 2a01:5e0:36:cf2a::1;
 deny 2a01:6340:2:501::10;
@@ -1172,6 +1173,7 @@ deny 2a02:418:6017::147;
 deny 2a02:418:6017::148;
 deny 2a02:898:218::1;
 deny 2a02:898:218::2;
+deny 2a02:c206:2095:2624::1;
 deny 2a02:c207:3002:8283::1;
 deny 2a02:ec0:209:10::4;
 deny 2a02:ed06::222;
@@ -1225,12 +1227,16 @@ deny 2a04:52c0:102:46e0::1;
 deny 2a04:52c0:103:412::1;
 deny 2a04:52c0:103:5acd::1;
 deny 2a04:52c0:104:31e6::1;
+deny 2a04:52c0:104:4735::1;
 deny 2a04:52c0:104:ad97::1;
 deny 2a04:52c0:104:fe02::1;
 deny 2a04:52c0:105:78fc::1;
+deny 2a04:52c0:105:82c0::1;
 deny 2a04:52c0:105:98a3::1;
+deny 2a04:52c0:106:394::1;
 deny 2a04:52c0:108:a34f::1;
 deny 2a04:52c0:116:e0e3::1;
+deny 2a04:52c0:119:3f0b::1;
 deny 2a04:52c0:128:c6e7:50ef:cafe:babe:1337;
 deny 2a04:52c0:130:896e::1;
 deny 2a04:52c0:130:d285::1;
@@ -1528,6 +1534,7 @@ deny 45.11.59.28;
 deny 45.118.133.44;
 deny 45.12.3.80;
 deny 45.128.133.242;
+deny 45.128.157.46;
 deny 45.131.65.34;
 deny 45.132.246.245;
 deny 45.134.225.36;
@@ -1567,6 +1574,7 @@ deny 45.141.215.95;
 deny 45.141.215.97;
 deny 45.148.10.111;
 deny 45.148.10.169;
+deny 45.151.122.34;
 deny 45.15.157.177;
 deny 45.61.185.172;
 deny 45.61.186.203;
@@ -1628,10 +1636,14 @@ deny 51.91.18.151;
 deny 5.196.8.113;
 deny 5.196.95.34;
 deny 5.255.100.219;
+deny 5.255.100.224;
 deny 5.255.100.227;
+deny 5.255.100.26;
+deny 5.255.101.10;
 deny 5.255.103.235;
 deny 5.255.104.202;
 deny 5.255.111.64;
+deny 5.255.114.171;
 deny 5.255.115.58;
 deny 5.255.117.56;
 deny 5.255.118.244;
@@ -1647,11 +1659,13 @@ deny 5.255.98.198;
 deny 5.255.98.23;
 deny 5.255.99.108;
 deny 5.255.99.124;
+deny 5.255.99.147;
 deny 5.255.99.5;
 deny 5.2.67.226;
 deny 5.2.72.110;
 deny 5.2.79.190;
 deny 5.34.182.203;
+deny 54.145.88.11;
 deny 5.42.80.232;
 deny 5.42.80.233;
 deny 5.42.80.234;
@@ -1783,6 +1797,7 @@ deny 93.99.104.128;
 deny 93.99.104.18;
 deny 93.99.104.194;
 deny 93.99.104.195;
+deny 93.99.104.40;
 deny 94.102.51.15;
 deny 94.140.115.63;
 deny 94.142.241.194;
