Update lists at 20240901-0900

--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -36,6 +36,7 @@ allow 104.244.78.233;
 allow 104.244.79.44;
 allow 104.244.79.50;
 allow 104.244.79.61;
+allow 107.173.179.59;
 allow 107.174.138.172;
 allow 107.189.10.175;
 allow 107.189.11.111;
@@ -118,7 +119,6 @@ allow 109.70.100.70;
 allow 109.70.100.71;
 allow 114.35.245.150;
 allow 118.163.74.160;
-allow 121.160.200.13;
 allow 121.78.28.175;
 allow 123.253.35.32;
 allow 125.212.241.131;
@@ -912,7 +912,10 @@ allow 23.129.64.230;
 allow 23.130.136.194;
 allow 23.130.136.195;
 allow 23.137.248.100;
+allow 23.137.248.139;
+allow 23.137.250.83;
 allow 23.137.253.108;
+allow 23.137.253.109;
 allow 23.137.253.110;
 allow 23.137.253.27;
 allow 23.152.24.77;
@@ -949,7 +952,6 @@ allow 23.154.177.7;
 allow 23.154.177.8;
 allow 23.154.177.9;
 allow 23.155.24.4;
-allow 23.155.8.104;
 allow 23.236.122.62;
 allow 23.94.211.25;
 allow 2400:6180:100:d0::2c:3001;
@@ -962,6 +964,7 @@ allow 2402:1f00:8000:239::;
 allow 2402:1f00:8100:400::9;
 allow 2407:3640:2207:8882::1;
 allow 24.240.72.170;
+allow 2.56.10.36;
 allow 2.57.214.194;
 allow 2.57.214.195;
 allow 2.58.56.220;
@@ -979,9 +982,11 @@ allow 2600:3c08::f03c:94ff:fef8:9872;
 allow 2600:3c0a::f03c:94ff:fe5a:3a17;
 allow 2602:2da:0:33:5054:ff:fe6c:39dc;
 allow 2602:2da:0:34:5054:ff:fe7e:7c21;
-allow 2602:2e5::104;
 allow 2602:2e6:0:4::;
+allow 2602:fc24:12:77c0::1;
 allow 2602:fc24:12:81a6::1;
+allow 2602:fc24:12:a679::1;
+allow 2602:fc24:19:1c9::1;
 allow 2602:fc24:19:2b4::1;
 allow 2602:fc24:19:30::1;
 allow 2602:fc24:19:eb06::1;
@@ -1148,6 +1153,8 @@ allow 2620:18c:0:192::230;
 allow 2620:95:4007::111;
 allow 27.255.75.198;
 allow 2800:ba0:6:c1::4858;
+allow 2a00:11c0:1b:aa2::5;
+allow 2a00:11c0:1c:311::5;
 allow 2a00:11c0:1f:1::55;
 allow 2a00:1728:f:f:f:f:c03c:9898;
 allow 2a00:1b88:4::2;
@@ -1528,8 +1535,11 @@ allow 37.205.8.220;
 allow 37.228.129.128;
 allow 37.228.129.5;
 allow 37.228.129.63;
+allow 37.252.254.33;
+allow 37.252.255.135;
 allow 37.48.120.196;
 allow 38.97.116.244;
+allow 44.213.226.49;
 allow 45.11.59.28;
 allow 45.118.133.44;
 allow 45.12.3.80;
@@ -1665,7 +1675,6 @@ allow 5.2.67.226;
 allow 5.2.72.110;
 allow 5.2.79.190;
 allow 5.34.182.203;
-allow 54.145.88.11;
 allow 5.42.80.232;
 allow 5.42.80.233;
 allow 5.42.80.234;
