--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -134,9 +134,11 @@ deny 2600:3c08::f03c:94ff:fef8:9872;
 deny 2600:3c0a::f03c:94ff:fe5a:3a17;
 deny 2602:2da:0:33:5054:ff:fe6c:39dc;
 deny 2602:2da:0:34:5054:ff:fe7e:7c21;
-deny 2602:2e5::104;
 deny 2602:2e6:0:4::;
+deny 2602:fc24:12:77c0::1;
 deny 2602:fc24:12:81a6::1;
+deny 2602:fc24:12:a679::1;
+deny 2602:fc24:19:1c9::1;
 deny 2602:fc24:19:2b4::1;
 deny 2602:fc24:19:30::1;
 deny 2602:fc24:19:eb06::1;
@@ -302,6 +304,8 @@ deny 2620:18c:0:192::229;
 deny 2620:18c:0:192::230;
 deny 2620:95:4007::111;
 deny 2800:ba0:6:c1::4858;
+deny 2a00:11c0:1b:aa2::5;
+deny 2a00:11c0:1c:311::5;
 deny 2a00:11c0:1f:1::55;
 deny 2a00:1728:f:f:f:f:c03c:9898;
 deny 2a00:1b88:4::2;
