Update lists at 20240901-1501

--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -305,6 +305,9 @@ deny 2620:18c:0:192::229;
 deny 2620:18c:0:192::230;
 deny 2620:95:4007::111;
 deny 2800:ba0:6:c1::4858;
+deny 2804:391c:0:18:1c00:1cff:fe00:ce;
+deny 2804:391c:0:18:1c00:adff:fe00:cc;
+deny 2804:391c:0:18:1c00:ceff:fe00:c0;
 deny 2a00:11c0:1b:aa2::5;
 deny 2a00:11c0:1c:311::5;
 deny 2a00:11c0:1f:1::55;
