--- a/set_real_ip_from-tor_ips_v6.conf
+++ b/set_real_ip_from-tor_ips_v6.conf
@@ -305,6 +305,9 @@ set_real_ip_from 2620:18c:0:192::229;
 set_real_ip_from 2620:18c:0:192::230;
 set_real_ip_from 2620:95:4007::111;
 set_real_ip_from 2800:ba0:6:c1::4858;
+set_real_ip_from 2804:391c:0:18:1c00:1cff:fe00:ce;
+set_real_ip_from 2804:391c:0:18:1c00:adff:fe00:cc;
+set_real_ip_from 2804:391c:0:18:1c00:ceff:fe00:c0;
 set_real_ip_from 2a00:11c0:1b:aa2::5;
 set_real_ip_from 2a00:11c0:1c:311::5;
 set_real_ip_from 2a00:11c0:1f:1::55;
